--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "dependencies": {
     "client-oauth2": "^4.2.5",
     "express": "^4.17.1",
-    "got": "^10.6.0"
+    "got": "^10.6.0",
+    "open": "^7.0.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.3",
